--- a/Display/InProcessInfo.xaml
+++ b/Display/InProcessInfo.xaml
@@ -42,7 +42,7 @@
                             <TextBlock Grid.Row="1" Grid.Column="1" Text="{Binding management.ProductName}" FontWeight="Bold"/>
                             <TextBlock Grid.Row="2" Grid.Column="0" Text="ロット番号"/>
                             <TextBox Grid.Row="2" Grid.Column="1" x:Name="TextLotNumber" Text="{Binding LotNumber}" HorizontalAlignment="Stretch" Margin="0,0,60,0"
-                                     materialDesign:TextFieldAssist.CharacterCounterVisibility="Collapsed" MaxLength="{Binding LotNumberLength}">
+                                     materialDesign:TextFieldAssist.CharacterCounterVisibility="Collapsed" MaxLength="{Binding LotNumberLength}" InputMethod.IsInputMethodEnabled="False">
                                 <TextBox.Resources>
                                     <Style TargetType="TextBox" BasedOn="{StaticResource TextBox}">
                                         <Style.Triggers>
@@ -66,7 +66,7 @@
                             </TextBox>
                             <TextBlock Grid.Row="3" Grid.Column="0" Text="担当者"/>
                             <TextBox Grid.Row="3" Grid.Column="1" x:Name="TextWorker" Text="{Binding inProcess.Worker}" HorizontalAlignment="Stretch" Margin="0,0,100,0"
-                                     materialDesign:TextFieldAssist.CharacterCounterVisibility="Collapsed">
+                                     materialDesign:TextFieldAssist.CharacterCounterVisibility="Collapsed" InputMethod.PreferredImeConversionMode="FullShape,Native" InputMethod.IsInputMethodEnabled="True">
                                 <TextBox.Resources>
                                     <Style TargetType="TextBox" BasedOn="{StaticResource TextBox}">
                                         <Style.Triggers>
@@ -88,7 +88,7 @@
                             <TextBlock Grid.Row="4" Grid.Column="0" Text="{Binding WeightLabel ,FallbackValue=重 量}" Visibility="{Binding VisibleItem1,Converter={StaticResource CollapsedConverter}}"/>
                             <StackPanel Orientation="Horizontal" Grid.Row="4" Grid.Column="1" Visibility="{Binding VisibleItem1,Converter={StaticResource CollapsedConverter}}">
                                 <TextBox x:Name="TextWeight" Text="{Binding inProcess.Weight}" Width="150" materialDesign:TextFieldAssist.CharacterCounterVisibility="Collapsed" 
-                                         MaxLength="{Binding AmountLength}">
+                                         MaxLength="{Binding AmountLength}" InputMethod.IsInputMethodEnabled="False">
                                     <TextBox.Resources>
                                         <Style TargetType="TextBox" BasedOn="{StaticResource TextBox}">
                                             <Style.Triggers>
@@ -111,7 +111,7 @@
                             </StackPanel>
                             <TextBlock Grid.Row="{Binding AmountRow,FallbackValue=5}" Grid.Column="0" Text="{Binding inProcess.UnitLabel,FallbackValue=数 量}"/>
                             <StackPanel Grid.Row="{Binding AmountRow,FallbackValue=5}" Grid.Column="1" Orientation="Horizontal">
-                                <TextBox x:Name="TextUnit" Text="{Binding inProcess.Unit}" Width="150"
+                                <TextBox x:Name="TextUnit" Text="{Binding inProcess.Unit}" Width="150" InputMethod.IsInputMethodEnabled="False"
                                          materialDesign:TextFieldAssist.CharacterCounterVisibility="Collapsed" MaxLength="{Binding UnitLength}">
                                     <TextBox.Resources>
                                         <Style TargetType="TextBox" BasedOn="{StaticResource TextBox}">
@@ -158,7 +158,7 @@
                             <StackPanel Grid.Row="6" Grid.Column="1" Orientation="Horizontal">
                                 <TextBox x:Name="TextAmount" Text="{Binding inProcess.Amount}" Width="{Binding AmountWidth,FallbackValue=150}"
                                          materialDesign:TextFieldAssist.CharacterCounterVisibility="Collapsed" MaxLength="{Binding AmountLength}"
-                                         Visibility="{Binding VisibleItem2,Converter={StaticResource CollapsedConverter}}">
+                                         Visibility="{Binding VisibleItem2,Converter={StaticResource CollapsedConverter}}" InputMethod.IsInputMethodEnabled="False">
                                     <TextBox.Resources>
                                         <Style TargetType="TextBox" BasedOn="{StaticResource TextBox}">
                                             <Style.Triggers>
