--- a/Display/TransportInfo.xaml
+++ b/Display/TransportInfo.xaml
@@ -51,7 +51,7 @@
                             </StackPanel>
                             <TextBlock Grid.Row="5" Grid.Column="0" Text="担当者"/>
                             <TextBox Grid.Row="5" x:Name="TextWorker" Grid.Column="1" Text="{Binding inProcess.TransportWorker}" HorizontalAlignment="Stretch" Margin="0,0,100,0"
-                                     materialDesign:TextFieldAssist.CharacterCounterVisibility="Collapsed">
+                                     materialDesign:TextFieldAssist.CharacterCounterVisibility="Collapsed" InputMethod.IsInputMethodEnabled="True">
                                 <TextBox.Resources>
                                     <Style TargetType="TextBox" BasedOn="{StaticResource TextBox}">
                                         <Style.Triggers>
