--- a/Display/ManufactureList.xaml
+++ b/Display/ManufactureList.xaml
@@ -21,11 +21,11 @@
                 <ColumnDefinition Width="*"/>
             </Grid.ColumnDefinitions>
             <Grid.RowDefinitions>
-                <RowDefinition Height="60"/>
+                <RowDefinition Height="50"/>
                 <RowDefinition Height="580"/>
             </Grid.RowDefinitions>
             <StackPanel Grid.Column="0" Grid.Row="0" Orientation="Horizontal" HorizontalAlignment="Right">
-                <TextBlock Text="{Binding ManufactureDate,Converter={StaticResource DateTimeConverter}}" VerticalAlignment="Bottom" Margin="0,0,0,5"/>
+                <TextBlock Text="{Binding ManufactureDate,Converter={StaticResource DateTimeConverter}}" Style="{StaticResource TextDate}"/>
             </StackPanel>
             <DataGrid Grid.Column="0" Grid.Row="1" ItemsSource="{Binding SelectTable}" SelectedIndex="{Binding SelectedIndex}" SelectedItem="{Binding SelectedItem}"
                       ColumnHeaderStyle="{StaticResource DefultHeader}">
