--- a/Display/PlanList.xaml
+++ b/Display/PlanList.xaml
@@ -26,7 +26,7 @@
                     <ColumnDefinition Width="*"/>
                 </Grid.ColumnDefinitions>
                 <Grid.RowDefinitions>
-                    <RowDefinition Height="70"/>
+                    <RowDefinition Height="50"/>
                     <RowDefinition Height="580"/>
                 </Grid.RowDefinitions>
                 <Grid Grid.Column="0" Grid.Row="0" >
@@ -34,8 +34,8 @@
                         <ColumnDefinition Width="900*"/>
                         <ColumnDefinition Width="260"/>
                     </Grid.ColumnDefinitions>
-                    <StackPanel Grid.Column="0" Grid.Row="0" Orientation="Horizontal" HorizontalAlignment="Left" Visibility="{Binding VisibleUnit,Converter={StaticResource CollapsedConverter}}">
-                        <Button Command="{Binding CommandButton}" CommandParameter="Sheet" Style="{StaticResource Search}">
+                    <StackPanel Grid.Column="0" Grid.Row="0" Orientation="Horizontal" VerticalAlignment="Center" HorizontalAlignment="Left" Visibility="{Binding VisibleUnit,Converter={StaticResource CollapsedConverter}}">
+                        <Button Command="{Binding CommandButton}" CommandParameter="Sheet" Style="{StaticResource Search}" Height="35" FontSize="22">
                             <WrapPanel>
                                 <TextBlock Text="シート"/>
                             </WrapPanel>
@@ -45,7 +45,7 @@
                                 </i:EventTrigger>
                             </i:Interaction.Triggers>
                         </Button>
-                        <Button Command="{Binding CommandButton}" CommandParameter="Coil" Style="{StaticResource Search}">
+                        <Button Command="{Binding CommandButton}" CommandParameter="Coil" Style="{StaticResource Search}" Height="35" FontSize="22">
                             <WrapPanel>
                                 <TextBlock Text="コイル"/>
                             </WrapPanel>
@@ -56,7 +56,7 @@
                             </i:Interaction.Triggers>
                         </Button>
                     </StackPanel>
-                    <TextBlock Grid.Column="1" Grid.Row="0" Text="{Binding UpdateDate}" HorizontalAlignment="Right" VerticalAlignment="Bottom" Margin="0,0,0,5"/>
+                    <TextBlock Grid.Column="1" Grid.Row="0" Text="{Binding UpdateDate,FallbackValue=2024年6月版}" Style="{StaticResource TextDate}"/>
                 </Grid>
                 <DataGrid Grid.Column="0" Grid.Row="1" ItemsSource="{Binding SelectTable}" SelectedIndex="{Binding SelectedIndex}" SelectedItem="{Binding SelectedItem}"
                           ColumnHeaderStyle="{StaticResource DefultHeader}">
